--- a/Canciones/Musica.html
+++ b/Canciones/Musica.html
@@ -42,6 +42,8 @@
     <br>
     <a href="https://open.spotify.com/intl-es/track/2q7DY7bBua9e9Aygmz8XmB?si=2dc24358868145c0" id="Primerlink">Como jordan</a>
     <br>
+    <hr>
+    <h3>Foro sol 2025</h3>
     <a href="../Mi primera pagina web.html">Primera pagina</a>
 </body>
 </html>
